--- a/src/app/layouts/pages/settings/settings.component.scss
+++ b/src/app/layouts/pages/settings/settings.component.scss
@@ -5,6 +5,7 @@
 .left-side {
   min-width: 220px;
   margin-right: 20px;
+  max-width: 220px;
 
   .avatar-box {
     min-height: 220px;
@@ -15,6 +16,10 @@
     padding: 0;
     position: relative;
     cursor: pointer;
+
+    img {
+      width: 100%;
+    }
 
     &:before {
       content: '';
@@ -63,6 +68,7 @@
 
       span {
         min-width: 25%;
+        max-width: 25%;
         text-align: right;
         margin-right: 16px;
       }
