--- a/src/app/layouts/pages/projects/pages/project/project.component.html
+++ b/src/app/layouts/pages/projects/pages/project/project.component.html
@@ -75,7 +75,7 @@
                 <button class="btn btn--outline-red" (click)="deleteProject()">Delete</button>
               </div>
               <div>
-                <input class="input input--big" type="text" placeholder="email" [(ngModel)]="newWorker">
+                <input class="input input--big" type="text" placeholder="Nickname" [(ngModel)]="newWorker">
                 <button class="btn btn--outline-blue" (click)="addWorker()">AddWorker</button>
               </div>
             </div>
