--- a/src/app/layouts/components/datetimepicker/datetimepicker.component.scss
+++ b/src/app/layouts/components/datetimepicker/datetimepicker.component.scss
@@ -5,13 +5,13 @@
   justify-content: center;
   width: 100%;
   margin: 8px 0;
+  flex-flow: column;
 }
 
 input {
   border-radius: 2px;
   border: 1px solid $grey;
   outline: none;
-  width: 100%;
 
   &:focus, &:active {
     outline: none;
