update timer save 2

--- a/src/app/layouts/pages/projects/pages/project/project.component.html
+++ b/src/app/layouts/pages/projects/pages/project/project.component.html
@@ -94,47 +94,7 @@
       [infiniteScrollThrottle]="50"
       (scrolled)="getTasks()">
     <li *ngFor="let task of project.tasks; let i = index" class="white-back">
-      <div class="task-main">
-        <div class="task-main__header">
-          <div>
-            <h2>{{task.name}}</h2>
-            <p>Created by: {{task.owner.nickname}}</p>
-            <p>Worker: {{task.worker.nickname}}</p>
-          </div>
-          <div>
-            <button *ngIf="task.worker._id === storageService.user._id || task.owner._id === storageService.user._id"
-                    (click)="deleteTask(task,i)">Delete
-            </button>
-          </div>
-        </div>
-        <br>
-        <div>
-          Times:
-          <ul>
-            <li *ngFor="let time of task.times">
-              START: {{moment(time.start).format('DD-MM-YYYY HH:mm:ss')}} ||
-              END:  {{moment(time.end).format('DD-MM-YYYY HH:mm:ss')}} ||
-              TOTAL: {{getTime(time.total)}}
-            </li>
-          </ul>
-        </div>
-        <br>
-        <div *ngIf="task.total">
-          <h4>Total:  {{getTime(task.total)}}</h4>
-        </div>
-      </div>
-      <div class="task-timer"
-           *ngIf="task.worker._id === storageService.user._id">
-        <div class="time">
-          {{timerNow}}
-        </div>
-        <div class="control">
-          <button *ngIf="!storageService.user.currentTimer" (click)="startTimer(task)">start</button>
-          <button *ngIf="storageService.user.currentTimer && task._id === storageService.user.currentTimer.task "
-                  (click)="stopTimer()">stop
-          </button>
-        </div>
-      </div>
+      <app-task [task]="task"></app-task>
     </li>
   </ul>
   <ng-template #emptytasks>
